--- a/css/style.css
+++ b/css/style.css
@@ -1050,6 +1050,7 @@ section{
     margin-right: -15px;
     margin-left: -15px;
     margin-top: 24px;
+    width: 100%;
 }
 .office-imgs div img{
     width: 100%;
