--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,42 @@
 /* common */
 html, body{
     font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "メイリオ", sans-serif;
-    font-weight: 500;
-    font-size:12px;
-    line-height: 1.75em;
-    letter-spacing: .03em;
+    font-weight: 600;
+    font-size:16px;
+    line-height: 1.75rem;
+    letter-spacing: .03rem;
     width:100%;
 }
 h1,h2{
     font-weight: 600;
-    letter-spacing: .1em;
-    font-size:16px;
+    letter-spacing: .1rem;
+    font-size:1.4rem;
     text-align: center;
 }
 span.full_bd{
-    border-bottom: 1px solid #151515;
+    border-bottom: 2px solid #151515;
 }
 h3,h4{
-    font-size:15px;
+    font-size:1.2rem;
     font-weight: bold;
 }
 small{
-    font-size: 9px;
+    font-size: 12px;
 }
 ul, p, span, small, strong, li, h1, h2, h3, h4, img, input, a{
     margin: 0;
     padding: 0;
     list-style: none;
 }
+strong{
+    color: #F15A24;
+}
 section{
-    border-top:0.5px solid black;
+    border-top:3px solid black;
     padding-bottom:32px;
     padding-top:32px;
+    max-width: 1400px;
+    margin:0 auto;
 }
 .arrow{
     display: inline-block;
@@ -40,11 +45,11 @@ section{
     font-size: .7em;
 }
 .triangle.gray{
-    background:linear-gradient(to top left, #fff 50%, #f5f5f5 50%) no-repeat top left/100% 100%;
+    background:linear-gradient(to top left, #fff 50%, #f1f1f1 50%) no-repeat top left/100% 100%;
 }
 
 .triangle.baju{
-    background:linear-gradient(to top left, #fff 50%, #FAF8F5 50%) no-repeat top left/100% 100%;
+    background:linear-gradient(to top left, #fff 50%, #f7f3ed 50%) no-repeat top left/100% 100%;
 }
 .center{
     text-align: center;
@@ -78,31 +83,43 @@ section{
 .bk-black{
     background-color: #151515;
     color: white;
-    padding: 4px;
+    padding: 8px;
 }
 .bk-gray{
     background-color: #f5f5f5;
-    padding: 4px;
+    padding: 8px;
 }
 .main_cap{
     position: relative;
     margin-bottom: 32px;
 }
+.main_cap small{
+    font-size:0.8rem;
+    margin-bottom: 6px;
+    display: inline-block;
+}
 .main_cap::after{
     content:"";
     position: absolute;
-    width:32px;
-    height: 2px;
+    width:60px;
+    height: 3px;
     background-color: #151515;
     bottom: -8px;
-    left: 50%;
-    margin-left: -16px;
+    left: calc(50% - 30px);
+    /* margin-left: -16px; */
+}
+.ul_box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #151515;
+    background-color: white;
 }
 .tbl{
-    border: 1px solid #151515;
     padding:16px;
     margin-bottom: 16px;
-    background-color: white;
+    
 }
 .container{
     max-width: 100%;
@@ -110,28 +127,28 @@ section{
 
 @media screen and (min-width:767px) and ( max-width:992px) {
     html, body{
-        font-size:14px;
+        /* font-size:14px; */
     }
     h1,h2{
-        font-size: 16px;
+        /* font-size: 16px; */
     }
     h3,h4{
-        font-size: 15px;
+        /* font-size: 15px; */
     }
     small{
-        font-size: 10px;
+        /* font-size: 10px; */
     }
 }
 @media screen and (min-width:993px) {
     html, body{
-        font-size:16px;
+        /* font-size:16px; */
         width: 100%;
     }
     h1,h2{
-        font-size: 18px;
+        /* font-size: 1.5rem; */
     }
     h3,h4{
-        font-size: 17px;
+        /* font-size: 1.3rem; */
     }
     small{
         font-size: 11px;
@@ -154,43 +171,52 @@ section{
 /* header */
 .smpMenu{
     position: fixed;
+    width: 100%;
     top: 0px;
     bottom:0;
-    right: -85vw;
+    right: -100%;
     transition: ease-in-out all .3s;
     z-index: 999;
 }
 .smpMenu .humberger{
-    width:15vw;
-    height:15vw;
+    width:60px;
+    height:60px;
     position: absolute;
     top: 0px;
-    left:-15vw;
+    left:-60px;
     text-align: center;
     transition: all .5s;
     cursor: pointer;
+    background-color: rgba(255,255,255,.9);
     /* z-index: 10; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    box-shadow: 0 0 8px #c69c6d;
 }
 .smpMenu .humberger span{
     display: block;
-    position: absolute;
-    width:10vw;
+    /* position: absolute; */
+    width:50px;
     height:2px;
-    left: 8px;
+    /* left: 8px; */
     border-radius: 2px;
-    background-color: white;
+    background-color: #333;
     transition: ease all 1s;
+    margin: 2px 0;
+
 }
 .smpMenu .humberger span:nth-child(1){
-    top: 18px;
+    /* top: 18px; */
     transform: rotate(0deg);
 }
 .smpMenu .humberger span:nth-child(2){
-    top: 24px;
+    /* top: 24px; */
     transform: rotate(0deg);
 }
 .smpMenu.open{
-    right: 0;
+    right: -60px;
 }
 .smpMenu.open .humberger{
     background-color: rgba(255,255,255,0.95);
@@ -199,11 +225,15 @@ section{
     background-color: #151515;
 }
 .smpMenu.open .humberger span:nth-child(1){
-    top: 22px;
+    /* top: 22px; */
+    margin: 0;
+    margin-bottom: -1px;
     transform: rotate(45deg);
 }
 .smpMenu.open .humberger span:nth-child(2){
-    top: 22px;
+    /* top: 22px; */
+    margin: 0;
+    margin-top: -1px;
     transform: rotate(-45deg);
 }
 .smpMenu p{
@@ -227,39 +257,77 @@ section{
     padding: 24px 0;
     color: #c69c6d;
     font-size: 1.5em;
-    border-bottom: .5px solid #151515;
+    border-bottom: 2px solid #151515;
     font-weight: bold;
 }
 .smpMenu li:nth-child(1){
-    border-top: .5px solid #151515;
+    border-top: 2px solid #151515;
 }
 .menuwrap{
     background-color: rgba(255,255,255,0.95);
-    width: 85vw;
+    /* width: 85vw; */
+    width: calc(100% - 60px);
     overflow-y: scroll;
     padding-bottom: 32px;
 }
 @media screen and (min-width:767px) and ( max-width:992px) {
-    .smpMenu .humberger{
-        width:50px;
-        height:50px;
-        position: absolute;
-        top: 0px;
-        left:-60px;
-    }
-    .smpMenu.open .humberger{
-        left: -50px;
-    }
-    .smpMenu .humberger span {
-        width: 40px;
-        left: 5px;
+    .smpMenu {
+        width: 80vw;
+        right: -80vw;
     }
 }
 @media screen and (min-width:993px) {
-    header .humberger,
-    .smpMenu{
+    header .humberger{
         display: none;
         visibility: hidden;
+    }
+    .smpMenu{
+        width: 100%;
+        height: auto;
+        right: 0;
+        top: initial;
+        visibility: visible;
+        box-shadow: 0 0 4px #c69c6d;
+        background-color: rgba(255,255,255,.9);
+    }
+    .menuwrap{
+        width: 100%;
+        padding: 0;
+        overflow-y: unset;
+        max-width: 1200px;
+        margin: 0 auto;
+        background-color: unset;
+    }
+    .menuwrap ul{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: 8px 0;
+    }
+    .menuwrap ul li{
+        height: 100%;
+        padding: 0 16px;
+        border: none;
+        font-size: .8rem;
+        line-height: 1.3rem;
+        border-left: 1px solid #333;
+        cursor: pointer;
+        -webkit-transition: all .3s;
+        transition: all .3s;
+        color: #333;
+    }
+    .menuwrap ul li:hover{
+        color: #c69c6d;
+    }
+    .smpMenu li:nth-child(1) {
+        border-top:none;
+        border-left: none;
+    }
+    .menuwrap ul li small{
+        display: inline-block;
+        /* margin-bottom: 4px; */
+        line-height: 11px;
     }
 }
 
@@ -378,7 +446,7 @@ section{
     text-align: left;
 }
 .numbers1 li{
-    font-size: 13px;
+    /* font-size: 13px; */
     font-weight: bold;
     background-repeat: no-repeat;
     background-size: 32px;
@@ -690,7 +758,7 @@ section{
     line-height: 1.2em;
 }
 .bdd{
-    border-bottom: double #151515;
+    border-bottom:6px double #151515;
 }
 @media screen and (min-width:767px) and ( max-width:992px) {
     #tokuten p{
@@ -739,7 +807,7 @@ section{
 .sml_caption{
     font-family: 'Montserrat', sans-serif;
     padding: 4px 24px;
-    font-size: 9px;
+    font-size: 12px;
     font-weight: 400;
     border:1px solid #151515;
     background-color: white;
@@ -757,8 +825,8 @@ section{
     background-repeat: no-repeat;
     width: 12px;
     height: 10px;
-    top: 16px;
-    left:50%;
+    top: 19px;
+    left:calc(50% - 6px);
     margin-left: -6px;
 }
 #dear h2{
@@ -787,32 +855,32 @@ section{
 #dear li{
     margin-top: 8px;
 }
-#dear li.imgswrap{
+/* #dear li.imgswrap{
     margin-left: -16px;
     margin-right: -16px;
     margin-top:-16px;
     margin-bottom:16px;
-}
+} */
 #dear li img{
     margin-right: 8px;
 }
 @media screen and (min-width:767px) and ( max-width:992px) {
-    .tbl{
+    /* .tbl{
         padding-left: 140px;
-    }
-    #dear li.imgswrap{
+    } */
+    /* #dear li.imgswrap{
         margin-left: -140px;
-    }
+    } */
 }
 @media screen and (min-width:993px) {
-    .tbl{
+    /* .tbl{
         padding-left: 180px;
         padding-right: 10px;
-    }
-    #dear li.imgswrap{
+    } */
+    /* #dear li.imgswrap{
         margin-left: -180px;
         margin-right: -10px;
-    }
+    } */
 }
 
 /* Chat lady */
@@ -820,7 +888,7 @@ h2.en_title{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     text-align: center;
-    letter-spacing: .15em;
+    letter-spacing: 0em;
     font-size: 1.5em;
 }
 #chatlady h3 img{
@@ -836,7 +904,7 @@ h2.en_title{
     position: absolute;
     top: 0;
     bottom: -32px;
-    width: 32px;
+    width: 36px;
     background-color: #151515;
 }
 .chatlady_desc_wrap div{
@@ -847,36 +915,75 @@ h2.en_title{
 .chatlady_desc_wrap div span{
     position: absolute;
     left: .25em;
-    font-size: 1.1em;
+    font-size: 13px;
     color: white;
     font-weight: 600;
 }
 .chatlady_desc_wrap div h4{
-    font-size: 16px;
+    /* font-size: 16px; */
     display: inline-block;
     border-bottom:2px solid #F15A24;
     margin-bottom: 16px;
     color:#F15A24;
     font-weight: 600;
 }
+#chatlady .office-imgs img{
+    width: 100%;
+    padding: 8px 0;
+}
 .office-imgs img{
     width: 100%;
 }
-@media screen and (min-width:767px) and ( max-width:992px) {
+.roomcap{
+    width: 100%;
+}
+.roomcap p{
+    width: 100%;
+    padding: 3rem 0 1.5rem;
+    font-size: 1.35rem;
+    /* height: 60px; */
+    /* background-color: yellow; */
+    position: relative;
+    border-radius: 8px;
+    background-size: auto auto;
+    background-color: #F3E2F2;
+    background-image: repeating-linear-gradient(45deg, transparent, transparent 16px, #F7EDF7 16px, #F7EDF7 32px );
+}
+.roomcap p::before{
+    content:"\かわいく/";
+    position: absolute;
+    top: 1.3rem;
+    left:calc(50% - 8.2rem);
+    font-size: 1rem;
+}
+@media screen and (min-width:767px){
+    #chatlady .office-imgs img{
+        width: 50%;
+    }
+    #chatlady .office-imgs img:nth-child(1){
+        padding-right: 8px;
+    }
+    #chatlady .office-imgs img:nth-child(2){
+        padding-left: 8px;
+    }
 }
 @media screen and (min-width:993px) {
     .chatlady_desc_wrap .blackline{
-        width: 48px;
+        width: 60px;
         bottom: -40px;
     }
     .chatlady_desc_wrap div{
         padding-left: 80px;
     }
     .chatlady_desc_wrap div span{
-        left: 10px;
+        left: 0px;
+        padding: 10px 0 0;
+        top: 10px;
+        font-size: 1.7rem;
+        border-top: 2px solid white;
     }
-    .chatlady_desc_wrap div h4{
-        font-size: 18px;
+    .chatlady_desc_wrap div span:nth-child(1){
+        border-top: none;
     }
 }
 
@@ -902,61 +1009,140 @@ h2.en_title{
 #workstyle h3{
     display: inline-block;
     margin: 16px 0;
-    border-bottom:1px solid #151515;
+    border-bottom:2px solid #151515;
     padding: 8px 0 0;
-    font-size: 16px;
+    /* font-size: 16px; */
 }
 #workstyle h4{
-    font-size: 14px;
+    /* font-size: 14px; */
     font-weight: bold;
     margin-bottom: 8px;
     
 }
-#workstyle .custome_dott_wrap .dottedbox{
-    margin-top: 16px;
-    padding-top: 16px;
+#workstyle .custome_dott_wrap{
+    border-top:1px dotted #333;
+    border-bottom:1px dotted #333;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
-#workstyle .custome_dott_wrap .dottedbox::before{
-    content:'';
-    background-image: linear-gradient(to right, #000, #000 1px, transparent 1px, transparent 5px);
-    background-size: 5px 1px;
-    background-repeat: repeat-x;
+#workstyle .custome_dott_wrap .dottedbox{
+    position: relative;
+    padding-top: 24px;
+    padding-bottom: 16px;
+}
+#workstyle .cap{
+    margin-top: 16px;
+    text-align: left;
+    font-size: .9rem;
+}
+#workstyle .custome_dott_wrap .dottedbox:nth-child(1) .cap{
+    padding-left: 24vw;
+}
+#workstyle .custome_dott_wrap .dottedbox:nth-child(2) .cap{
+    padding-left: 23vw;
+}
+#workstyle .custome_dott_wrap .dottedbox:nth-child(3) .cap{
+    padding-left: 24vw;
+    padding-right: 0px;
+}
+#workstyle .custome_dott_wrap .dottedbox img{
     position: absolute;
-    top: 0;
     bottom: 0;
+}
+#workstyle .custome_dott_wrap .dottedbox:nth-child(1) img{
     left: 0;
-    right: 0;
+    width: 22vw;
+}
+#workstyle .custome_dott_wrap .dottedbox:nth-child(2) img{
+    left: -12px;
+    width: 28vw;
+}
+#workstyle .custome_dott_wrap .dottedbox:nth-child(3) img{
+    left: -8vw;
+    width: 34vw;
+}
+
+#workstyle .custome_dott_wrap .dottedbox:nth-child(2){
+    border-top: 1px dotted #333;
+    border-bottom: 1px dotted #333;
+}
+@media (min-width: 576px) {
+    #workstyle .custome_dott_wrap .cap{
+        width: 50vw;
+        max-width: 370px;
+        margin: 0 auto;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(1) .cap{
+        padding-left: 8vw;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(2) .cap{
+        padding-left: 8vw;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(3) .cap{
+        padding-left: 8vw;
+        padding-right: 0px;
+    }
 }
 @media screen and (min-width:767px){
-    #workstyle .custome_dott_wrap{
-        margin-top: 24px;
-        margin-bottom: -32px;
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(1) img{
+        width: 180px;
     }
-    #workstyle .custome_dott_wrap .dottedbox{
-        margin-top: 0;
-        padding-top:24px;
-        padding-bottom: 24px;
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(2) img{
+        left: 0px;
+        width: 250px;
     }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(3) img{
+        right: 0;
+        width: 280px;
+    }
+    
 }
 @media screen and (min-width:993px) {
-    #workstyle .custome_dott_wrap .dottedbox:nth-child(2)::after,
-    #workstyle .custome_dott_wrap .dottedbox:nth-child(3)::after{
-        content:'';
-        background-image: linear-gradient(to bottom, #000, #000 1px, transparent 1px, transparent 5px);
-        background-size: 1px 5px;
-        background-repeat: repeat-y;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
+    #workstyle .custome_dott_wrap .dottedbox{
+        padding-bottom: 50px;
     }
+    #workstyle .custome_dott_wrap .cap{
+        margin-top: 34px;
+        width: 30vw;
+        max-width: 360px;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(1) .cap{
+        padding-left: 8.5vw;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(2) .cap{
+        padding-left:9vw;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(3) .cap{
+        padding-right: 80px;
+        padding-left: 8px;
+    }
+    #workstyle .custome_dott_wrap .dottedbox img{
+        /* max-height: 130px; */
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(1) img{
+        left: 0;
+        width: 110px;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(2) img{
+        left: 0px;
+        width: 162px;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(3) img{
+        right: 0;
+        left: unset;
+        width: 200px;
+    }
+    #workstyle .custome_dott_wrap .dottedbox:nth-child(2){
+        border-left: 1px dotted #333;
+        border-right: 1px dotted #333;
+    }
+    
     .mt-16{
         margin-top: 16px;
         padding-top: 8px;
     }
     .custome_dott{
-        padding-top: 16px;
+        /* padding-top: 16px; */
     }
 }
 
@@ -972,7 +1158,7 @@ h2.en_title{
 /* Benefit */
 .bene-img-wrap{
     position: relative;
-    background-color: #FAF8F5;
+    background-color: #f7f3ed;
     width: 100%;
     height: 130px;
     margin-top: 80px;
@@ -981,7 +1167,7 @@ h2.en_title{
 .bene-img-wrap::after{
     content:"";
     position: absolute;
-    background:linear-gradient(to top left, transparent 50%, #FAF8F5 50%) no-repeat top left/100% 100%;
+    background:linear-gradient(to top left, transparent 50%, #f7f3ed 50%) no-repeat top left/100% 100%;
     width: 100%;
     height: 30px;
     bottom: -30px;
@@ -1039,7 +1225,7 @@ h2.en_title{
         margin-top: 74px;
     }
     .bene-img-wrap h3{
-        font-size: 20px;
+        /* font-size: 20px; */
         line-height: 1.7;
         letter-spacing: 1.6px;
         top: 44%;
@@ -1139,7 +1325,7 @@ h2.en_title{
     padding: 32px 32px;
 }
 #qa .bk-gray.open{
-    max-height: 200px;
+    max-height: 300px;
     opacity: 1;
 }
 #qa .bk-gray.nm{
@@ -1149,13 +1335,16 @@ h2.en_title{
     position: relative;
     line-height: 32px;
     padding-left: 16px;
+    padding-right: 40px;
+    border-bottom: 1px solid white;
+    font-size: 1rem;
 }
 #qa .qa_btn{
     position: absolute;
-    right: 20px;
-    width: 32px;
-    height: 32px;
-    top: 4px;
+    right: 16px;
+    width: 48px;
+    height: 48px;
+    top: 0px;
     color: white;
     cursor: pointer;
 }
@@ -1210,7 +1399,7 @@ h2.en_title{
     left: 0;
     right: 0;
     text-align: center;
-    font-size: 24px;
+    /* font-size: 24px; */
     font-weight: bold;
 
 }
@@ -1263,7 +1452,7 @@ form input{
     line-height: 1.35;
 }
 form input[name="age"]{
-    width: 3em;
+    width: 4rem;
 }
 form textarea{
     font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "メイリオ", sans-serif;
@@ -1342,12 +1531,19 @@ footer{
     padding: 16px;
     text-align: center;
     color: white;
+    font-size: .9rem;
+}
+footer h2{
+    font-size: 1rem;
 }
 footer .logo{
-    font-size: 32px;
+    font-size: 32;
     margin: 16px 0;
 }
 @media screen and (min-width:767px) and ( max-width:992px) {
 }
 @media screen and (min-width:993px) {
+    footer{
+        padding-bottom: 70px;
+    }
 }
