--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h3,h4{
     font-weight: bold;
 }
 small{
-    font-size: 12px;
+    font-size: small;
 }
 ul, p, span, small, strong, li, h1, h2, h3, h4, img, input, a{
     margin: 0;
@@ -98,6 +98,9 @@ a:hover{
 .bk-gray{
     background-color: #f5f5f5;
     padding: 8px;
+}
+.bk-pink{
+    background-color: #fbdbd0;
 }
 .main_cap{
     position: relative;
@@ -193,19 +196,6 @@ a:hover{
 .smpMenu.open{
     height: calc(100% - 60px);
 }
-/* .smpMenu p{
-    font-size: 1.3em;
-    text-align: left;
-    margin-top: 24px;
-    padding: 16px;
-    position: relative;
-    font-weight: bold;
-}
-.smpMenu p::before{
-    content:"×";
-    position: absolute;
-    top: 0;
-} */
 .smpMenu .menuwrap ul{
     padding: 16px;
     text-align: center;
@@ -222,11 +212,8 @@ a:hover{
 }
 .menuwrap{
     background-color: rgba(255,255,255,0.95);
-    /* width: 85vw; */
-    /* width: calc(100% - 60px); */
     width: 100%;
     overflow-y: scroll;
-    /* padding-bottom: 32px; */
 }
 .smpfixed{
     position: fixed;
@@ -288,12 +275,6 @@ a:hover{
     top: 6px;
     transform: rotate(-45deg);
 }
-@media screen and (min-width:767px) and ( max-width:992px) {
-    /* .smpMenu {
-        width: 80vw;
-        right: -80vw;
-    } */
-}
 @media screen and (min-width:993px) {
     header .humberger{
         display: none;
@@ -345,13 +326,12 @@ a:hover{
     }
     .smpMenu .menuwrap ul li small{
         display: inline-block;
-        /* margin-bottom: 4px; */
         line-height: 11px;
     }
 }
 
 /* TOP image */
-#top-image{
+/* #top-image{
     margin: 0;
     padding:0;
     border: none;
@@ -465,7 +445,6 @@ a:hover{
     text-align: left;
 }
 .numbers1 li{
-    /* font-size: 13px; */
     font-weight: bold;
     background-repeat: no-repeat;
     background-size: 32px;
@@ -493,8 +472,8 @@ a:hover{
 }
 .numbers1 li:nth-child(4){
     background-image: url(../res/number1_04.svg);
-}
-@media screen and (min-width:767px) and (max-width:992px){
+} */
+/* @media screen and (min-width:767px) and (max-width:992px){
     .numbers1 li{
         font-size: 15px;
         padding-left: 48px;
@@ -703,8 +682,235 @@ a:hover{
         font-size: 11px;
         line-height: 1;
     }
-}
+} */
 
+#top-image{
+    width: 100%;
+    /* height: 90vh; */
+    border-top: none;
+}
+#top-image > div{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+#top-image .sub{
+    font-size: 12px;
+}
+#top-image .relative,
+#top-image.relative{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+#top-image .noabu{
+    position: unset !important;
+}
+#top-image .img-wrap{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#top-image .img-wrap img{
+    max-width: 70%;
+    max-height: 90%;
+    margin: 0 auto;
+    margin-bottom: 26vw;
+    outline: 10px solid rgba(255,255,255,.7);
+}
+#top-image .wrap1{
+    width: 80vw;
+    max-width: 400px;
+}
+#top-image .wrap1 h1{
+    width: 100%;
+}
+#top-image .wrap1 p{
+    left: 16px;
+    top: -1rem;
+    line-height: 1.4;
+    position: absolute;
+}
+#top-image .wrap1 small{
+    top: 1.3rem;
+    left: 16px;
+    position: absolute;
+}
+#top-image .wrap2{
+    top: 5vw;
+    right: 0;
+    width: 20vw;
+    color: #E4007F;
+    line-height: 1.3rem;
+    position: absolute;
+}
+#top-image .wrap2 span{
+    font-size: 2rem;
+}
+#top-image .wrap3{
+    line-height: 1rem;
+    z-index: 1;
+    margin-left: 16px;
+}
+#top-image .wrap3 h2{
+    text-align: left;
+    font-size: 2rem;
+    line-height: 1.5rem;
+    margin-top: -10px;
+}
+#top-image .wrap3 li{
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
+}
+#top-image .wrap3 li:nth-child(1):before{
+    content: "1";
+}
+#top-image .wrap3 li:nth-child(2):before{
+    content: "2";
+}
+#top-image .wrap3 li:nth-child(3):before{
+    content: "3";
+}
+#top-image .wrap3 li:before{
+    background-color: #E4007F;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    border-radius: 50%;
+    color: #fbdbd0;
+    font-weight: bold;
+    margin-right: 8px;
+    padding-top: 4px;
+    padding-left: 3px;
+    font-size: 1.3rem;
+}
+#top-image .wrap4{
+    z-index: 1;
+    margin-left: 16px;
+}
+#top-image .wrap4 span{
+    color: white;
+    text-shadow: 0 0 10px rgb(228 0 127 / 30%);
+    font-size: 4rem;
+}
+#top-image .wrap4 p span:nth-child(1){
+    font-size: 1.7rem;
+    line-height: 4.5rem;
+}
+#top-image .wrap4 small{
+    line-height: 1rem;
+    margin-top: .7rem;
+    display: inline-block;
+}
+#top-image .wrap5{
+    position: absolute;
+    top: 30vw;
+    right: 3.3%;
+    font-family: serif;
+    letter-spacing: .8px;
+    z-index: 1;
+}
+#top-image .wrap5 p{
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+}
+#top-image .wrap6{
+    margin-top: 16px;
+    text-align: center;
+    width: 100%;
+    z-index: 1;
+}
+#top-image .wrap6 ul{
+    justify-content: center;
+    font-size: small;
+    padding: 0 8px;
+    max-width: 650px;
+    margin: 0 auto;
+}
+#top-image .wrap6 ul li{
+    line-height: 1.1rem;
+    letter-spacing: 0;
+    font-size: 12px;
+}
+#top-image .wrap7{
+    margin-top: 16px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
+#top-image .wrap7 p{
+    padding: 0.1rem 0.6rem;
+    background-color: white;
+    border-radius: 1rem;
+    font-size: 12px;
+}
+@media (min-width:500px) {
+    #top-image .img-wrap img{
+        margin-bottom: unset;
+    }
+    #top-image .wrap5{
+        right: 10vw;
+        top: 25vw;
+    }
+}
+@media (min-width:767px) {
+    #top-image .sub {
+        font-size: small;
+    }
+    #top-image .img-wrap img{
+        height: 80%;
+        width: auto;
+    }
+    #top-image .wrap1{
+        margin-left: calc(50% - 400px);
+        margin-top: 24px;
+    }
+    #top-image .wrap1 p{
+        left: 5vw;
+    }
+    #top-image .wrap2{
+        top: 1vw;
+        right: calc(50% - 22vw + 16px);
+        width: unset;
+    }
+    #top-image .wrap3,
+    #top-image .wrap4{
+        margin-left: 10vw;
+    }
+    #top-image .wrap5{
+        right: 15vw;
+        top: 15vw;
+        font-size: 1.3rem;
+    }
+    #top-image .wrap6 ul li,
+    #top-image .wrap7 p{
+        font-size: 1rem;
+        line-height: 1.7rem;
+    }
+}
+@media (min-width:993px) {
+    #top-image{
+        padding-top: 70px;
+    }
+    #top-image .wrap2{
+        right: calc(50% - 22%);
+    }
+    #top-image .wrap3,
+    #top-image .wrap4{
+        margin-left: 20%;
+        margin-top: 16px;
+    }
+    #top-image .wrap5{
+        right: 20%;
+        top: 15%;
+    }
+}
 
 /* 特典 */
 #tokuten{
@@ -886,32 +1092,8 @@ a:hover{
 #dear li{
     margin-top: 8px;
 }
-/* #dear li.imgswrap{
-    margin-left: -16px;
-    margin-right: -16px;
-    margin-top:-16px;
-    margin-bottom:16px;
-} */
 #dear li img{
     margin-right: 8px;
-}
-@media screen and (min-width:767px) and ( max-width:992px) {
-    /* .tbl{
-        padding-left: 140px;
-    } */
-    /* #dear li.imgswrap{
-        margin-left: -140px;
-    } */
-}
-@media screen and (min-width:993px) {
-    /* .tbl{
-        padding-left: 180px;
-        padding-right: 10px;
-    } */
-    /* #dear li.imgswrap{
-        margin-left: -180px;
-        margin-right: -10px;
-    } */
 }
 
 /* Chat lady */
@@ -1005,8 +1187,6 @@ h2.en_title{
     width: 100%;
     padding: 3rem 0 1.5rem;
     font-size: 1.35rem;
-    /* height: 60px; */
-    /* background-color: yellow; */
     position: relative;
     border-radius: 8px;
     background-size: auto auto;
@@ -1146,9 +1326,6 @@ h2.en_title{
 }
 #workstyle img.eyecatch{
     width: 100%;
-}
-#workstyle .info{
-    
 }
 #workstyle .info div{
     display: flex;
