upd top image #2

--- a/css/style.css
+++ b/css/style.css
@@ -810,7 +810,7 @@ a:hover{
 #top-image .wrap5{
     position: absolute;
     top: 30vw;
-    right: 3.3%;
+    right: 2.5rem;
     font-family: serif;
     letter-spacing: .8px;
     z-index: 1;
